<resources xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">My Library</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_possibility_change_items_cart">Enable the possibility of adding or remove items to the cart</string>
    <string name="pref_description_possibility_change_items_cart">Boolean command to add
        or remove the possibility of adding or remove items to the cart
    </string>

    <string name="pref_title_table_number">The table number</string>
    <string name="pref_default_table_number">1</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_header_config_page">Config Page</string>
    <string name="table_number_key">table_number_key</string>
    <string name="possibility_change_cart_switch_key">possibility_change_cart_switch_key</string>

    <string name="unknown_error">An unknown error occurred</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="menu_signout">Sign out</string>

    <string name="sign_out_failed">Sign out failed</string>

    <string name="welcome_screen_text">Welcome to Restaurant App</string>
    <string name="sign_in_button_text">sign in</string>
    <string name="sign_out_button_text">sign out</string>
    <string name="anonymous_button_text">anonymous</string>


    <string name="restaurant_list_key">restaurant_list_key</string>
    <string name="default_restaurant_id">restaurant_id3</string>
    <string name="pref_title_restaurant">Selecione o restaurante</string>
    <string name="order_ready_title">Seu pedido foi realizado</string>
    <string name="cart_empty_message">Seu carrinho de compras esta vazio</string>
    <string-array name="pref_restaurant_list_titles">
        <item>Restaurant #1</item>
        <item>Restaurant #2</item>
    </string-array>
    <string-array name="pref_restaurant_list_values">
        <item>@string/default_restaurant_id</item>
        <item>restaurant_id1</item>
    </string-array>
</resources>
