<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/possibility_change_cart_switch_key"
        android:summary="@string/pref_description_possibility_change_items_cart"
        android:title="@string/pref_title_possibility_change_items_cart" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_table_number"
        android:inputType="number"
        android:key="@string/table_number_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_table_number" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/default_restaurant_id"
        android:entries="@array/pref_restaurant_list_titles"
        android:entryValues="@array/pref_restaurant_list_values"
        android:key="@string/restaurant_list_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_restaurant" />

</PreferenceScreen>
